fix merge issues. Centerd and aligned elements

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   color: var(--text-color);
   -webkit-transition: background-color 150ms ease-out !important;
   transition: background-color 150ms ease-out !important;
+  margin: 0;
 }
 
 body.day-background {
@@ -37,6 +38,16 @@ body.day-background {
  *
  *
  * */
+
+ .main-container {
+  max-width: 1200px;
+  padding-left: 1.4rem;
+  padding-right: 1.4rem;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
 .container {
   max-width: 1000px;
   padding-left: 1.4rem;
@@ -204,7 +215,7 @@ body.day-background {
 }
 
 .presentation-container {
-  margin: 2em;
+  margin: 2rem 0px;
   text-align: center;
 }
 
@@ -251,8 +262,6 @@ h3 {
 }
 
 .aboutme-container {
-  margin-left: 2rem;
-  margin-right: 2rem;
   max-width: 500px;
 }
 
@@ -261,9 +270,10 @@ h3 {
 }
 
 .timeline-container {
-  margin-top: 4rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   display: flex;
   align-content: center;
   justify-content: center;
@@ -276,6 +286,18 @@ h3 {
 
 .timeline-text {
   fill: var(--text-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.circle {
+  stroke: var(--text-color);
+  fill:  var(--background-color);
+  
+}
+
+.line {
+  stroke: var(--text-color);
 }
 
 .avatar-container {
@@ -289,23 +311,28 @@ h3 {
 .headers-container {
   display: inline-block;
   vertical-align: top;
-  width: 75%;
-  padding: 1em;
+  width: 60%;
+  padding: 1rem;
+  padding-left: 3rem;
   text-align: left;
 }
 
 .image-container {
-  width: 260px;
-  height: 260px;
+  width: 240px;
+  height: 240px;
   border-radius: 50%;
   overflow: hidden;
 }
 
+.skills-container-wrapper {
+  margin-top: 4rem;
+  text-align: center;
+}
+
 .skills-container {
-  margin-top: 8rem;
   margin-left: 2em;
   margin-right: 2em;
-  max-width: 800px;
+  max-width: 300px;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -319,9 +346,9 @@ h3 {
   align-items: center;
   justify-content: center;
   padding: 5px 10px;
-  border: 0.125rem solid var(--text-color);
+  border: 1px solid var(--text-color);
   border-radius: 50px;
-  font-size: 14px;
+  font-size: 20px;
   color: var(--text-color);
   transition: background-color 0.3s ease;
 }
@@ -331,12 +358,18 @@ h3 {
 }
 
 .skillpill:hover {
-  background-color: #f0f0f0;
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+.projects-container-wrapper h2 {
+  margin-top: 4rem;
+  padding-left: 2rem;
+  
 }
 
 .projects-container {
-  padding-left: 8rem;
-  padding-right: 8rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -345,7 +378,6 @@ h3 {
 .project-container {
   width: 100%;
   margin-bottom: 30px;
-  border: 1px solid #ccc;
   padding: 20px;
   display: flex;
   flex-wrap: wrap;
@@ -366,6 +398,7 @@ h3 {
 }
 
 .project-text {
+  font-size: 18px;
   padding-right: 30px;
   box-sizing: border-box;
 }
@@ -389,21 +422,43 @@ h3 {
   margin-bottom: 20px;
 }
 
+.myjourney-container p {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  font-size: 18px;
+
+}
+
 .project-image {
+  border-radius: 20px;
+
 }
 
 .project-link {
   display: block;
-  font-size: 16px;
   text-align: center;
   padding: 10px 0;
-  background-color: #007bff;
-  color: #fff;
+  border: 1px solid var(--text-color);
+  border-radius: 50px;
+  font-size: 20px;
+  color: var(--text-color);
   text-decoration: none;
 }
 
 .project-link:hover {
-  background-color: #0056b3;
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+.footer-container {
+  width: 100%;
+  padding-top: 150px;
+}
+
+.footer-content {
+  background-color: var(--background-color);
+  height: 120px;
+  width: 100%;
+
 }
 
 @media screen and (min-width: 700px) {
@@ -434,18 +489,16 @@ h3 {
   }
 
   .presentation-container {
-    margin: 8rem;
+    margin: 8rem 0px;
   }
 
   .aboutme-container {
-    margin-left: 8rem;
-    margin-right: 8rem;
-    max-width: 500px;
+    max-width: 600px;
   }
 
   .timeline-container {
-    margin-left: 8rem;
-    margin-right: 8rem;
+    margin-left: 4rem;
+    margin-right: 4rem;
   }
   .resume-link {
     border-radius: 1rem;
